--- a/main.css
+++ b/main.css
@@ -2,10 +2,23 @@ html {
   overflow-y: auto;
 }
 
-section {
-  display: none;
+.main > .content {
   height: calc(100vh - 52px);
   overflow-y: auto;
+  position: relative;
+}
+
+.main > .content > section {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.main > .content > section.test,
+.main > .content > section.setting {
+  overflow: scroll;
+  padding-bottom: 30px;
 }
 
 @media screen and (max-width: 1023px) {
