--- a/main.css
+++ b/main.css
@@ -4,8 +4,10 @@ html {
 
 .main > .content {
   height: calc(100vh - 52px);
+  margin: 0;
   overflow-y: auto;
   position: relative;
+  -webkit-overflow-scrolling: touch;
 }
 
 .main > .content > section {
@@ -41,4 +43,12 @@ html {
   right: 0;
   bottom: 0;
   left: 0;
+}
+
+.modal {
+  padding: 16px;
+}
+
+.mb100 {
+  margin-bottom: 100px;
 }
